--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
-    "react-router-dom": "^6.27.0"
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^6.27.0",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
