--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@heroicons/react": "^2.2.0",
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.7.9",
+    "gh-pages": "^6.3.0",
+    "lucide-react": "^0.483.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
