--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "gh-pages": "^6.3.0",
     "lucide-react": "^0.483.0",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.27.0",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.15.10",
     "swiper": "^11.1.15"
   },
